- fixed lightbox bug (1px visible at the top)

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -43,7 +43,8 @@ img {
 
   &:after {
     content: '';
-    top: 0;
+    position: absolute;
+    top: -5px;
     width: 100vw;
     height: 10px;
     background-color: rgb(0, 0, 0);
